shimlang/test_scripts/errors/closure_type_error.stderr
 1 | let x = "hello";
 2 | let f = fn() { x + 1; };
                      ^
 3 | f();
Error: Operation '+' not supported between String(5, 0, u24([0, 0, 5])) and Integer(1)
